Changed files to Kotlin and removed chat message when sorting.